[gd_scene load_steps=10 format=3 uid="uid://b8x5jbk2jb3x5"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_abc123"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_def456"]
[ext_resource type="Script" path="res://scripts/Session005Test.gd" id="3_ghi789"]
[ext_resource type="Script" path="res://scripts/ItemDatabase.gd" id="4_item_db"]
[ext_resource type="Script" path="res://scripts/CombatManager.gd" id="5_combat"]
[ext_resource type="Script" path="res://scripts/EventManager.gd" id="6_event"]
[ext_resource type="Script" path="res://scripts/MapManager.gd" id="7_map"]
[ext_resource type="Script" path="res://scripts/SaveManager.gd" id="8_save"]

[node name="TestScene" type="Node"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_abc123")

[node name="ItemDatabase" type="Node" parent="GameManager"]
script = ExtResource("4_item_db")

[node name="CombatManager" type="Node" parent="GameManager"]
script = ExtResource("5_combat")

[node name="EventManager" type="Node" parent="GameManager"]
script = ExtResource("6_event")

[node name="MapManager" type="Node" parent="GameManager"]
script = ExtResource("7_map")

[node name="SaveManager" type="Node" parent="GameManager"]
script = ExtResource("8_save")

[node name="Session005Test" type="Node" parent="GameManager"]
script = ExtResource("3_ghi789")

[node name="WorldContainer" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="WorldContainer"]
script = ExtResource("2_def456") 